Translated new strings for record audio.

--- a/src/i18n/ja/strings.txt
+++ b/src/i18n/ja/strings.txt
@@ -75,6 +75,7 @@ token_button=続ける
 token_empty_validation=アクセストークンを提供してください。
 add_image_title=イメージを追加する
 edit_image_title=イメージを編集する
+edit_file_title=ファイルを編集する
 add_image_save_button=保存
 edit_image_required=タイトルは必須です。
 add_new=新しく追加する
@@ -88,3 +89,5 @@ default_journal=デフォルト日誌
 default_language=デフォルト言語
 default_folder=デフォルトフォルダ
 default_settings=デフォルト設定
+record_audio=音声を記録する
+back_to_profile=プロファイルに戻る
