Update language file strings.txt

--- a/src/i18n/sl/strings.txt
+++ b/src/i18n/sl/strings.txt
@@ -34,8 +34,8 @@ confirm_delete_ok_button=Izbriši
 library_title=Naslov
 library_body=Podrobnosti
 library_tags=Ključne besede
-library_blog=Journal
-library_folder=Folder
+library_blog=Dnevnik
+library_folder=Mapa
 camera_unavailable=Fotoaparat ni na voljo.
 camera_error=Prišlo je do težav pri fotografiranju.
 camera_take_photo_button=Naredi fotografijo
@@ -75,6 +75,7 @@ token_button=Nadaljuj
 token_empty_validation=Prosimo, vpišite žeton za dostop.
 add_image_title=Dodaj sliko
 edit_image_title=Uredi sliko
+edit_file_title=Uredi datoteko
 add_image_save_button=Shrani
 edit_image_required=Zahtevan je naslov
 add_new=Dodaj novo
@@ -87,3 +88,6 @@ change=Spremeni
 default_journal=Privzeti dnevnik
 default_language=Privzeti jezik
 default_folder=Privzeta mapa
+default_settings=Privzete nastavitve		
+record_audio=Posnami zvok		
+back_to_profile=Nazaj na profil
