Add new DE language strings for audio and profile

--- a/src/i18n/de/strings.txt
+++ b/src/i18n/de/strings.txt
@@ -13,7 +13,7 @@ unknown_server_error=Unbekannter Server-Fehler
 menu_user=Nutzer
 menu_add=Hinzufügen
 menu_pending=Wartend
-menu_sync=
+menu_sync=Synchronisieren
 menu_active=Aktiv
 logout_button=Abmelden
 logout_confirmation=Sind Sie sicher, dass Sie sich ausloggen wollen?
@@ -88,3 +88,6 @@ default_journal=Standardblog
 default_language=Sprache
 default_folder=Standardordner
 default_settings=Einstellungen
+back_to_profile=Zurück zum Profil
+edit_file_title=Datei bearbeiten
+record_audio=Audio aufnehmen
