Update ES lang strings for audio and profile

--- a/src/i18n/es/strings.txt
+++ b/src/i18n/es/strings.txt
@@ -75,6 +75,7 @@ token_button=Proceder
 token_empty_validation=Introduce un token de acceso.
 add_image_title=Añadir imagen
 edit_image_title=Editar imagen
+edit_file_title=Editar archivo
 add_image_save_button=Guardar
 edit_image_required=Se requiere un título
 add_new=Añadir nuevo
@@ -88,3 +89,5 @@ default_journal=Blog predeterminado
 default_language=Idioma predeterminado
 default_folder=Carpeta predeterminada
 default_settings=Configuración predeterminada
+record_audio=Grabar audio
+back_to_profile=Volver al perfil
