--- a/src/i18n/cs/strings.txt
+++ b/src/i18n/cs/strings.txt
@@ -48,7 +48,7 @@ login_types_header=Jak se chcete přihlásit?
 single_sign_on=Přihlášení SSO
 local_username_password=Místní přihlášení
 login_manual_token_entry=Vložte přístupový token
-no_sso_url_found=Nenalezen žádný SSO server. 
+no_sso_url_found=Nenalezen žádný SSO server.
 server_response_prefix=Odpověď z Mahara serveru:
 sesskey_scrape_error=Nebylo možné obnovit relaci z Mahary.
 cant_set_upload_token_error=Nebylo možné nastavit nahrávací token. Je nám líto, dokud nebude toto vyřešeno, nahrávání nebude fungovat.
@@ -56,7 +56,7 @@ login_type_error_choose_server=Nenalezen žádný server. Prosím, nakonfigurujt
 server_login_error=Nelze se přihlásit k serveru. Je adresa serveru zadána správně?
 server_sync_error=Nebylo možné provést synchronizaci se serverem.
 add_journal_entry=Vložit záznam do deníku
-change_server=Změnit 
+change_server=Změnit
 wizard_skip_button=Přeskočit
 upload_file=Nahrát soubor
 sso_error=Nelze získat přístup k serveru SSO. Tento problém může být způsoben tím, že server není k dispozici, má nesprávný protokol SSL nebo aplikace nebo prohlížeč nemá oprávnění k přístupu na server. Prosím, zkuste to znovu později.
@@ -76,6 +76,7 @@ token_empty_validation=Prosíme o poskytnutí nahrávacího tokenu.
 add_image_title=Vložit obrázek
 edit_image_title=Upravit obrázek
 add_image_save_button=Uložit
+edit_file_title=Upravit soubor
 edit_image_required=Vyžadováno jméno
 add_new=Vložit nový
 description=Popis
@@ -88,3 +89,5 @@ default_journal=Výchozí deník
 default_language=Výchozí jazyk
 default_folder=Výchozí složka
 default_settings=Výchozí nastavení
+record_audio=Nahrát zvuk
+back_to_profile=Zpět na profil
